--- a/src/components/linklist/LinkList.scss
+++ b/src/components/linklist/LinkList.scss
@@ -34,35 +34,22 @@ $animate: all 0.2s ease-in-out;
   &:hover {
     cursor: pointer;
     color: black;
+    opacity: 1;
+
     &:before,
     &:after {
       width: 100%;
       opacity: 1;
     }
   }
+}
 
-  //&:hover {
-  //  color: black;
-  //}
-  //
-  //&:hover:before {
-  //  visibility: visible;
-  //  -webkit-transform: scaleX(1);
-  //  transform: scaleX(1);
-  //}
-  //
-  //&:before {
-  //  content: "";
-  //  position: absolute;
-  //  width: 100%;
-  //  height: 2px;
-  //  bottom: 0;
-  //  left: 0;
-  //  background-color: blue;
-  //  visibility: hidden;
-  //  -webkit-transform: scaleX(0);
-  //  transform: scaleX(0);
-  //  -webkit-transition: all 0.3s ease-in-out 0s;
-  //  transition: all 0.3s ease-in-out 0s;
-  //}
+.selected-link {
+  text-decoration: none;
+  position: relative;
+  opacity: 1;
+  color: black;
+  padding-bottom: 1px;
+  font-weight: bold;
+  border-bottom: 4px solid $green-primary;
 }
