--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colours';
+
 .link-list {
   margin: auto;
   text-align: center;
@@ -5,4 +7,8 @@
   justify-content: center;
   flex-direction: column;
   height: 100vh;
+}
+
+.sidebar-title-name {
+  color: $green-primary;
 }
