--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -1,14 +1,16 @@
 @import '../../styles/colours';
 
-.link-list {
-  margin: auto;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  height: 100vh;
-}
+.sidebar-container {
+  .link-list {
+    margin: auto;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+  }
 
-.sidebar-title-name {
-  color: $green-primary;
+  .sidebar-title-name {
+    color: $green-primary;
+  }
 }
