--- a/src/components/top-nav/TopNav.scss
+++ b/src/components/top-nav/TopNav.scss
@@ -3,7 +3,7 @@
 #top-nav {
   display: flex;
   justify-content: space-between;
-  padding: 2px 10px;
+  padding: 0 10px;
 
   #top-nav-links {
     display: flex;
@@ -11,7 +11,8 @@
 
     a {
       text-align: center;
-      margin: 10px 3px 0 3px;
+      padding-bottom: 4px;
+      margin: 25px 5px 0 5px;
     }
   }
 }
