F-add-content: Modify colours.

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,15 +45,15 @@
 }
 
 .bg-green-primary {
-  background: $green-primary;
+  background: $green;
 }
 
 .bg-green-secondary {
-  background: $green-secondary;
+  background: $green;
 }
 
 .bg-green-dark {
-  background: $green-dark;
+  background: $green;
 }
 
 .App-link {
