--- a/src/components/animated-link/AnimatedLink.scss
+++ b/src/components/animated-link/AnimatedLink.scss
@@ -19,7 +19,7 @@ $animate: all 0.2s ease-out;
         margin: 5px 0 0;
         transition: $animate;
         opacity: 0;
-        background-color: $green-primary;
+        background-color: $green;
         left: 0;
     }
 
@@ -43,5 +43,5 @@ $animate: all 0.2s ease-out;
     color: black;
     padding-bottom: 1px;
     font-weight: bold;
-    border-bottom: 4px solid $green-primary;
+    border-bottom: 4px solid $green;
 }
