--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -1,6 +1,10 @@
 @import '../../styles/colours';
 
 .sidebar-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 200px 400px 1fr;
+
   .link-list {
     margin: auto;
     text-align: center;
@@ -8,6 +12,23 @@
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+  }
+
+  .icon-link {
+    cursor: pointer;
+    font-size: 34px;
+    margin: 0 5px;
+
+    &:hover {
+      color: $green;
+    }
+  }
+
+  .icon-links-container {
+    padding-left: 40px;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    align-self: end;
   }
 
   .sidebar-subtitle {
