--- a/src/App.scss
+++ b/src/App.scss
@@ -14,10 +14,6 @@
     grid-template-rows: 50px 1fr;
   }
 
-  .sidebar-container {
-    background: #f2f2f2;
-  }
-
   .content-container {
     display: grid;
     grid-template-columns: 0.05fr 0.9fr 0.05fr;
@@ -30,7 +26,6 @@
     }
 
     .content {
-
       .body {
         font-family: 'Arvo', '';
       }
@@ -41,21 +36,10 @@
 }
 
 .divider-thick {
-  height: 4px;
+  height: 5px;
+  border-style: none;
 }
 
-.bg-green-primary {
+.bg-green {
   background: $green;
-}
-
-.bg-green-secondary {
-  background: $green;
-}
-
-.bg-green-dark {
-  background: $green;
-}
-
-.App-link {
-  color: #61dafb;
 }
