--- a/src/components/top-nav/TopNav.scss
+++ b/src/components/top-nav/TopNav.scss
@@ -4,6 +4,8 @@
   display: flex;
   justify-content: space-between;
   padding: 0 10px;
+  background: white;
+  height: 60px;
 
   #top-nav-links {
     display: flex;
