--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -1,5 +1,8 @@
+@import '../../styles/colours';
+
 .card-container {
-  border: 1px solid black;
+  border: 1px solid $grey;
   padding: 10px 15px;
   border-radius: 5px;
+  background: $grey;
 }
