--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -2,7 +2,7 @@
 
 .sidebar-container {
   display: grid;
-  background: #f2f2f2;
+  background: $grey;
 
   .link-list-container {
     align-self: start;
