--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -1,4 +1,53 @@
+@-ms-keyframes animationOne {
+  0% { -ms-transform: rotate(0deg); }
+  50%, 100% { -ms-transform: rotate(315deg); }
+}
+
 @keyframes fade-in-from-above {
+  from {
+    opacity: 0;
+    transform: translateY(-2rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes fade-in-from-above {
+  from {
+    opacity: 0;
+    transform: translateY(-2rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@-moz-keyframes fade-in-from-above {
+  from {
+    opacity: 0;
+    transform: translateY(-2rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@-o-keyframes fade-in-from-above {
+  from {
+    opacity: 0;
+    transform: translateY(-2rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@-ms-keyframes fade-in-from-above {
   from {
     opacity: 0;
     transform: translateY(-2rem);
