Fix sidebar height changing on link click. Add sidebar anims.

--- a/src/components/badge/Chip.scss
+++ b/src/components/badge/Chip.scss
@@ -7,7 +7,7 @@
   cursor: default;
 
   &:hover {
-    background: green;
-    border-color: green;
+    background: $green;
+    border-color: $green;
   }
 }
