--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -1,8 +1,3 @@
-@-ms-keyframes animationOne {
-  0% { -ms-transform: rotate(0deg); }
-  50%, 100% { -ms-transform: rotate(315deg); }
-}
-
 @keyframes fade-in-from-above {
   from {
     opacity: 0;
@@ -69,6 +64,17 @@
   }
 }
 
+@keyframes fade-in-from-left {
+  from {
+    opacity: 0;
+    transform: translateX(-4rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .fade-in-above {
   color: black;
   animation: fade-in-from-above;
@@ -78,5 +84,11 @@
 .fade-in-below {
   color: black;
   animation: fade-in-from-below;
+  animation-duration: 300ms;
+}
+
+.fade-in-left {
+  color: black;
+  animation: fade-in-from-left;
   animation-duration: 300ms;
 }
