--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -75,6 +75,17 @@
   }
 }
 
+@keyframes fade-in-from-right {
+  from {
+    opacity: 0;
+    transform: translateX(4rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .fade-in-above {
   color: black;
   animation: fade-in-from-above;
@@ -90,5 +101,11 @@
 .fade-in-left {
   color: black;
   animation: fade-in-from-left;
+  animation-duration: 300ms;
+}
+
+.fade-in-right {
+  color: black;
+  animation: fade-in-from-right;
   animation-duration: 300ms;
 }
