change text colour

--- a/src/components/animated-link/AnimatedLink.scss
+++ b/src/components/animated-link/AnimatedLink.scss
@@ -40,7 +40,7 @@ $animate: all 0.2s ease-out;
     text-decoration: none;
     position: relative;
     opacity: 1;
-    color: black;
+    color: $text;
     padding-bottom: 1px;
     font-weight: bold;
     border-bottom: 4px solid $green;
