--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -3,10 +3,11 @@
 .sidebar-container {
   display: grid;
   background: $grey;
+  grid-template-rows: 200px;
 
   .link-list-container {
-    margin-top: -80px;
     align-self: start;
+
     .link-list {
       margin: auto;
       text-align: center;
@@ -32,9 +33,9 @@
     padding-left: 40px;
     margin-top: 100px;
     margin-bottom: 50px;
-    align-self: end;
-    align-items: end;
-    align-content: end;
+    //align-self: end;
+    //align-items: end;
+    //align-content: end;
   }
 
   .sidebar-subtitle {
