--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -86,6 +86,20 @@
   }
 }
 
+@keyframes fill-from-left {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+.fill-from-left {
+  animation: fill-from-left;
+  animation-duration: 500ms;
+}
+
 .fade-in-above {
   color: black;
   animation: fade-in-from-above;
