--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -4,5 +4,6 @@
   padding: 10px 15px;
   border-radius: 5px;
   background: $grey;
-  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12)
+  -webkit-box-shadow: 0 7px 8px 0 rgba(0,0,0,0.21);
+  box-shadow: 0 7px 8px 0 rgba(0,0,0,0.21);
 }
